# vm

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
examples/: test.py
examples/asm/: hello.asm  ret42.asm
lib/Pinot/: Exceptions.h  Memory.cpp  Memory.h  VM.cpp  VM.h
pinot_asm/: battery.toml  pinot_asm
pinot_asm/src/: main.volt
pinot_asm/src/pinot_asm/: byte_sink.volt  instruction.volt  location.volt  parser.volt  register.volt  symbols.volt  token.volt
src/: main.cpp
test/: VM.Test.cpp
